--- a/phpBB/styles/prosilver/template/posting_editor.html
+++ b/phpBB/styles/prosilver/template/posting_editor.html
@@ -9,13 +9,18 @@
 
         <!-- IF S_POST -->
         <dl style="clear: left;">
+                <dt><label>Privacy:</label></dt>
+		<dd>
+                    Your post will be available for review by all NYU faculty and staff. For
+                    a private forum, please contact alisa.surkis@nyumc.org.
+                </dd>
                 <dt><label>Instructions:</label></dt>
 		<dd>
                     1. Select relevant faculty from <a href="http://far.med.nyu.edu">http://far.med.nyu.edu</a>.<br/>
-                    2. Obtain email addresses for these faculty members.<br/>
-                    3. Post the name of your proposal as the subject.<br/>
-                    4. Post the faculty to email and your specific aims.<br/>
-                    4. Submit.
+                    2. Obtain NYU email addresses for these faculty members.<br/>
+                    3. Post the name of your proposal in the subject.<br/>
+                    4. Post your one page introduction and specific aims in the body.<br/>
+                    5. Submit.
                 </dd>
         </dl>
         <!-- ENDIF -->
@@ -123,7 +128,7 @@
 		<dt><label for="femails">{L_FEMAILS}:</label></dt>
 		<dd><input type="text" name="femails" id="femails" size="45" maxlength="<!-- IF S_NEW_MESSAGE -->60<!-- ELSE -->64<!-- ENDIF -->" tabindex="2" value="{FEMAILS}{DRAFT_FEMAILS}" class="inputbox autowidth" /></dd>
                 <dt><label for="femails">&nbsp;</label></dt>
-		<dd>Multiple emails separated by semicolons. <br/>For example: 'johndoes@nyumc.org;constance@gmail.com'</dd>
+		<dd>Multiple emails separated by semicolons. <br/>For example: 'johndoes@nyumc.org;constance@med.nyu.edu'</dd>
                 <!-- ENDIF -->
 	</dl>
 	<!-- IF CAPTCHA_TEMPLATE and S_CONFIRM_CODE -->
