--- a/phpBB/styles/prosilver/template/posting_editor.html
+++ b/phpBB/styles/prosilver/template/posting_editor.html
@@ -16,7 +16,7 @@
                 </dd>
                 <dt><label>Instructions:</label></dt>
 		<dd>
-                    1. Select relevant faculty from <a href="http://far.med.nyu.edu">http://far.med.nyu.edu</a>.<br/>
+                    1. Select relevant faculty from <a href="http://findaresearcher.med.nyu.edu">http://findaresearcher.med.nyu.edu</a>.<br/>
                     2. Obtain NYU email addresses for these faculty members.<br/>
                     3. Post the name of your proposal in the subject.<br/>
                     4. Post your one page introduction and specific aims in the body.<br/>
