update instruction text

--- a/phpBB/styles/prosilver/template/posting_editor.html
+++ b/phpBB/styles/prosilver/template/posting_editor.html
@@ -16,9 +16,10 @@
                 </dd>
                 <dt><label>Instructions:</label></dt>
 		<dd>
-                    1. Select relevant faculty from <a href="http://findaresearcher.med.nyu.edu">http://findaresearcher.med.nyu.edu</a>.<br/>
+                    1. Select up to 3 relevant faculty from <a href="http://findaresearcher.med.nyu.edu">http://findaresearcher.med.nyu.edu</a>.<br/>
                     2. Obtain NYU email addresses for these faculty members.<br/>
-                    3. Post the name of your proposal in the subject.<br/>
+                    3. Enter the subject of your proposal as follows -- Grant Type: Proposal Title.<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(e.g. R01: Machine Learning for Patient Retrieval).<br/>
                     4. Post your one page introduction and specific aims in the body.<br/>
                     5. Submit.
                 </dd>
