update post language

--- a/phpBB/styles/prosilver/template/posting_editor.html
+++ b/phpBB/styles/prosilver/template/posting_editor.html
@@ -11,12 +11,11 @@
         <dl style="clear: left;">
                 <dt><label>Privacy:</label></dt>
 		<dd>
-                    Your post will be available for review by all NYU faculty and staff. For
-                    a private forum, please contact alisa.surkis@nyumc.org.
+                    Your post will be available for review by all NYU faculty and staff.
                 </dd>
                 <dt><label>Instructions:</label></dt>
 		<dd>
-                    1. Select up to 3 relevant faculty from <a href="http://findaresearcher.med.nyu.edu">http://findaresearcher.med.nyu.edu</a>.<br/>
+                    1. Select 1 to 4 faculty from <a href="http://findaresearcher.med.nyu.edu">http://findaresearcher.med.nyu.edu</a>.<br/>
                     2. Obtain NYU email addresses for these faculty members.<br/>
                     3. Enter the subject of your proposal as follows -- Grant Type: Proposal Title.<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(e.g. R01: Machine Learning for Patient Retrieval).<br/>
