update forward to include subject

--- a/phpBB/styles/prosilver/template/forward_body.html
+++ b/phpBB/styles/prosilver/template/forward_body.html
@@ -23,6 +23,7 @@
                 <input type="hidden" name="p" value="{POSTID}" />
                 <input type="hidden" name="f" value="{FORUMID}" />
                 <input type="hidden" name="t" value="{TOPICID}" />
+                <input type="hidden" name="s" value="{SUBJECT}" />
                 <dd>Multiple emails separated by semicolons. <br/>For example: 'johndoes@nyumc.org;constance@med.nyu.edu'</dd>
                 <input type="submit" name="forward" value="Submit"/>
              </dl>
