change nyu to nyulmc

--- a/phpBB/styles/prosilver/template/posting_editor.html
+++ b/phpBB/styles/prosilver/template/posting_editor.html
@@ -16,7 +16,7 @@
                 <dt><label>Instructions:</label></dt>
 		<dd>
                     1. Select 1 to 4 faculty from <a href="http://findaresearcher.med.nyu.edu">http://findaresearcher.med.nyu.edu</a>.<br/>
-                    2. Obtain NYU email addresses for these faculty members.<br/>
+                    2. Obtain NYULMC email addresses for these faculty members.<br/>
                     3. Enter the subject of your proposal as follows -- Grant Type: Proposal Title.<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(e.g. R01: Machine Learning for Patient Retrieval).<br/>
                     4. Post your one page introduction and specific aims in the body.<br/>
